Establecer un ancho del 100% en el botón que borra las casillas de verificación

--- a/css/pages-styles.css
+++ b/css/pages-styles.css
@@ -238,6 +238,7 @@ li span {
   background: var(--accent-color);
   border-radius: var(--border-radius);
   box-shadow: inset 2px 2px 2px 0px rgba(255, 255, 255, .5), 7px 7px 20px 0px rgba(0, 0, 0, .1), 4px 4px 5px 0px rgba(0, 0, 0, .1);
+  width: 100%;
   transition: opacity 0.3s;
 }
 
