--- a/css/pages-styles.css
+++ b/css/pages-styles.css
@@ -97,7 +97,7 @@ p {
   padding: 0.75rem 1rem;
   font-size: 1rem;
   font-weight: 500;
-  margin-bottom: 1.25rem;
+  margin-bottom: 4rem;
   transition: opacity .3s;
 }
 
@@ -118,7 +118,6 @@ p {
 }
 
 .hero-title {
-  margin: 1rem 0;
   font-size: 3.75rem;
   line-height: 1.1;
 }
@@ -337,6 +336,10 @@ li span {
     opacity: 1;
   }
 
+  .page-back-btn {
+    margin-bottom: 2rem;
+  }
+
   .hero-section {
     padding: 5rem 1.25rem 0;
   }
@@ -359,6 +362,7 @@ li span {
   }
 
   .check-list-title {
+    font-size: 1.25rem;
     margin-bottom: 2.5rem;
   }
 
