Modificar tamaño y opacidad de íconos en Footer

--- a/css/index-styles.css
+++ b/css/index-styles.css
@@ -336,6 +336,7 @@ SECTION: FAQS
 
 .footer a {
   color: var(--white);
+  opacity: 0.8;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -350,8 +351,8 @@ SECTION: FAQS
 .github-icon,
 .linkedin-icon,
 .website-icon {
-  width: 2.5rem;
-  height: 2.5rem;
+  width: 2rem;
+  height: 2rem;
 }
 
 /* RESPONSIVE */
